# clonalisa

./: GFP_masks_from_cellpose.cppipe  README.md  _version.py  clonalisa_GUI.py  clonalisa_config.json  clonalisa_ui.ui  colony_detection.py  config_utils.py  environment.yml  image_processing.py  interaction.R  make_multi_channels.py  omnipose_pipeline.py  omnipose_qt_gui.py  omnipose_threaded.py  plotting.py  process_masks.py  pyproject.toml  run_cellpose_with_GUI_WIP.py  simple_omnipose_gui.py  test R.py  wellWellWells.py
2024_03_29_02_03_10.875324_epoch_960/: 2024_03_29_02_03_10.875324_epoch_960_per_well_data.csv
example_testing_cropped/plate1_day1_20250515_144427/: B2_pos2Z0_Bright Field_1_001_02.tif  B2_pos2Z1_Bright Field_1_001_02.tif  B2_pos2Z2_Bright Field_1_001_02.tif  B2_pos3Z0_Bright Field_1_001_02.tif  B2_pos3Z1_Bright Field_1_001_02.tif  B2_pos3Z2_Bright Field_1_001_02.tif  B2_pos4Z0_Bright Field_1_001_02.tif  B2_pos4Z1_Bright Field_1_001_02.tif  B2_pos4Z2_Bright Field_1_001_02.tif  B3_pos1Z0_Bright Field_1_001_02.tif  B3_pos1Z1_Bright Field_1_001_02.tif  B3_pos1Z2_Bright Field_1_001_02.tif  B3_pos2Z0_Bright Field_1_001_02.tif  B3_pos2Z1_Bright Field_1_001_02.tif  B3_pos2Z2_Bright Field_1_001_02.tif  B3_pos3Z0_Bright Field_1_001_02.tif  B3_pos3Z1_Bright Field_1_001_02.tif  B3_pos3Z2_Bright Field_1_001_02.tif  B3_pos4Z0_Bright Field_1_001_02.tif  B3_pos4Z1_Bright Field_1_001_02.tif  B3_pos4Z2_Bright Field_1_001_02.tif
example_testing_cropped/plate1_day5_20250519_153429/: B2_pos1Z0_Bright Field_1_001_02.tif  (+23 more)
tests/: test_import.py
(+50 files in other folders)
