[build-system]
requires = ["setuptools>=70", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "clonalisa"
version = "0.0.1"
description = "Automated clonal colony & cell counter"
authors = [{name = "TDJM"}]
requires-python = ">=3.10"

dependencies = [
  "omnipose @ git+https://github.com/kevinjohncutler/omnipose@8bc0db3e63bea26fd8f043ffe6fb1889e5b3a405",
  "statsmodels>=0.14,<0.16",
  "shapely>=2.0,<3",
  "pyside6"
]

[tool.setuptools.packages.find]
exclude = ["example_testing_cropped*", "omnipose_models*"]